# developer-sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/branch-strictness/: action.yml
.github/workflows/: tests.yml
docs/: CSS_STYLE_GUIDE.md  EVENT_DELEGATION_ARCHITECTURE.md  FAILURE_PATTERNS.md  GITHUB_TRIGGER_MIGRATION.md  MIGRATION_GUIDE.md  TESTING.md  THREAT_MODEL_PROMPT_INJECTION.md  UTC_TIMESTAMPS.md  architecture.md  dependency-injection.md
examples/: README.md
examples/basic-setup/: .env.example  README.md
examples/basic-setup/orchestrations/: code-review.yaml
examples/docker/: .env.example  Dockerfile  README.md  docker-compose.yml
examples/docker/orchestrations/: example.yaml
examples/multi-orchestration/: .env.example  README.md
examples/multi-orchestration/orchestrations/: code-review.yaml  docs-update.yaml  github-triage.yaml
examples/orchestrations/: advanced-options.yaml  agent-types.yaml  branch-patterns.yaml  chained-pipeline.yaml  github-project-polling.yaml  github-template-variables.yaml  jira-polling.yaml  jira-template-variables.yaml  outcomes.yaml
orchestrations/: README.md  developer-sentinel.yaml  example.yaml  example.yaml.example  test-project.yaml
scripts/: migrate_trigger_to_file_level.py
src/sentinel/: __init__.py  agent_logger.py  app.py  bootstrap.py  branch_validation.py  circuit_breaker.py  cli.py  config.py  container.py  dashboard_server.py  deduplication.py  execution_manager.py  executor.py  github_poller.py  github_rest_client.py  health.py  logging.py  main.py  main.pyi  mcp_clients.py  orchestration.py  orchestration_edit.py  orchestration_registry.py  poll_coordinator.py  poll_coordinator.pyi  poller.py  project_filter.py  rate_limiter.py  resilience.py  rest_clients.py  router.py  sdk_clients.py  service_health_gate.py  shutdown.py  sphinx_jira_role.py  state_tracker.py  steps_key.py  tag_manager.py  types.py  validation.py  (+1 more)
src/sentinel/agent_clients/: __init__.py  base.py  claude_sdk.py  codex.py  cursor.py  factory.py
src/sentinel/agents/: __init__.py  base.py  confluence_tools.py  exceptions.py  github_tools.py  jira_tools.py  registry.py
src/sentinel/dashboard/: __init__.py  app.py  models.py  routes.py  state.py
src/sentinel/dashboard/static/css/: utilities.css
src/sentinel/dashboard/static/js/: orchestration-forms.js  ui-messages.js
src/sentinel/dashboard/templates/: base.html  index.html  log_viewer.html  macros.html  metrics.html  orchestrations.html
src/sentinel/dashboard/templates/partials/: file_github_edit_form.html  file_trigger_edit_form.html  issue_queue.html  orchestration_create_form.html  orchestration_detail.html  orchestration_edit_form.html  orchestrations.html  recent_executions.html  running_steps.html  service_health.html  status.html  system_status.html
stylelint-plugins/: deprecation-comments.js  deprecation-comments.test.js
tests/: README.md  __init__.py  conftest.py  helpers.py  mocks.py  test_agent_client_factory.py  test_agent_logger.py  test_agents.py  test_benchmark_comparison.py  test_config.py  test_container.py  test_cursor_agent_client.py  test_dashboard_routes.py  test_deduplication.py  test_docs_link_validation.py  test_executor.py  test_executor_core.py  test_executor_templates.py  test_executor_workdir.py  test_github_poller.py  test_github_project_integration.py  test_github_rest_client.py  test_logging.py  test_macros.py  test_main.py  test_mcp_clients.py  test_orchestration.py  test_orchestration_github_trigger.py  test_orchestration_parsing.py  test_poller.py  test_project_filter.py  test_rest_clients.py  test_router.py  test_sdk_clients.py  test_sentinel_execution.py  test_sentinel_github.py  test_sentinel_polling.py  test_tag_manager.py  test_validation.py  test_yaml_writer.py
tests/integration/: __init__.py  test_benchmark_comparison.py  test_fault_injection.py  test_github_api_integration.py  test_jira_api_integration.py
tests/unit/: __init__.py  test_agent_client_base.py  test_agent_client_factory.py  test_agent_clients_init.py  test_agent_logger.py  test_app_dashboard.py  test_bootstrap_health_gate.py  test_branch_validation.py  test_circuit_breaker.py  test_codex_agent_client.py  test_completed_executions.py  test_config.py  test_container.py  test_cursor_agent_client.py  test_dashboard_routes.py  test_dashboard_state.py  test_dashboard_state_lock_contention.py  test_deduplication.py  test_docs_link_validation.py  test_docstring_napoleon.py  test_exceptions.py  test_execution_manager_dedicated.py  test_execution_manager_ttl.py  test_executor_core.py  test_executor_github.py  test_executor_status.py  test_executor_templates.py  test_executor_workdir.py  test_github_poller.py  test_github_project_integration.py  test_github_rest_client.py  test_grouped_orchestrations.py  test_health.py  test_logging.py  test_logging_filenames.py  test_macros.py  test_main_sentinel.py  test_migrate_trigger_to_file_level.py  test_mocks.py  test_orchestration_agent_type.py  (+37 more)
