[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "developer-sentinel"
version = "0.1.0"
description = "Python orchestration app that polls Jira for tagged issues and routes them to Claude-based agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brent Walker"}
]
keywords = ["jira", "claude", "agent", "orchestration", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "claude-agent-sdk>=0.1.0,<1.0.0",
    # Dependency injection framework for improved testability and loose coupling
    # See: docs/dependency-injection.md for usage patterns
    "dependency-injector>=4.41.0,<5.0.0",
    "httpx>=0.27.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # YAML Libraries - two libraries are needed for different purposes:
    # - pyyaml: Used for general YAML parsing (simple read operations)
    #   See: src/sentinel/orchestration.py (uses yaml.safe_load for config parsing)
    "pyyaml>=6.0,<7.0.0",
    # - ruamel.yaml: Used for round-trip YAML editing that preserves comments and formatting
    #   See: src/sentinel/yaml_writer.py (uses YAML round-trip for preserving comments and formatting)
    "ruamel.yaml>=0.18.0,<1.0.0",
    # Dashboard dependencies
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    # TTL-based cache for rate limiting cleanup
    "cachetools>=5.3.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "types-PyYAML>=6.0,<7.0.0",
    "types-cachetools>=5.0,<6.0.0",
    # BeautifulSoup for HTML parsing in tests
    "beautifulsoup4>=4.12.0,<5.0.0",
    # Import sorting - uses Black-compatible profile
    # See: [tool.isort] configuration below
    "isort>=5.13.0,<6.0.0",
    # Pre-commit hooks for automated code quality checks
    "pre-commit>=3.6.0,<4.0.0",
    # Time mocking for deterministic testing of time-dependent code
    # See: tests/integration/test_fault_injection.py (circuit breaker recovery timeout tests)
    "freezegun>=1.2.0,<2.0.0",
]

[project.scripts]
sentinel = "sentinel.main:main"

[project.urls]
Homepage = "https://github.com/btw-claude/developer-sentinel"
Repository = "https://github.com/btw-claude/developer-sentinel"
Issues = "https://github.com/btw-claude/developer-sentinel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "G"]
# G004: Logging statement uses f-string - enforces lazy % formatting for performance

[tool.ruff.lint.per-file-ignores]
# Relax line length and nested-with rules in tests for readability
"tests/**/*.py" = ["E501", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Enable asyncio mode for pytest-asyncio to handle async tests (DS-509)
asyncio_mode = "auto"
# Use default asyncio event loop policy
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests requiring external services (deselect with '-m \"not integration\"')",
]
# Test type addopts examples (uncomment as needed):
# Run only unit tests: pytest tests/unit
# Run only integration tests: pytest tests/integration -m integration
# Run all tests except integration: pytest -m "not integration"
# Run all tests: pytest

[tool.isort]
# Use Black-compatible profile for consistent formatting
profile = "black"
# Match the project's line length
line_length = 100
# Source paths for first-party imports
src_paths = ["src", "tests"]
# Known first-party modules
known_first_party = ["sentinel"]
# Skip files that shouldn't be modified
skip_gitignore = true
